elements/pfe-navigation/src/pfe-navigation--lightdom.scss
/* ... */
@include browser-query(edge) {
    pfe-navigation-item {
        &[pfe-icon] {
            > .pfe-navigation-item__trigger {
                > [slot="trigger"] {
                    font-size: 14px;
                }
            }            
        }

        [slot="tray"] {
            display: flex;
            flex-grow: 1;
        }

        [slot="trigger"] {
            font-size: 16px;
            margin: 0;
        }

        pfe-icon {
            margin-bottom: 10px;
        }

        .pfe-navigation-item__trigger[aria-expanded=true] {
            &::after {
                display: block !important;
            }
        }

        &.expanded {
            .pfe-navigation-item__trigger {
                pfe-icon:not(.load-failed) svg.pfe-icon filter.pfe-icon feFlood.pfe-icon {
                    flood-color: #{pfe-color(ui-complement)} !important;
                }
            }

            [slot="trigger"] {
                a {
                    color: #{pfe-color(surface--lightest--text)} !important;
                }
            }
        }
        &[is_nested]:not(.expanded):not([parent_hidden]) .pfe-navigation-item__trigger.pfe-navigation-item::after {
            height: .5em;
            width: .5em;
            top: 22px;
        }
    }

    .pfe-navigation-item__trigger {
        transition: none !important;
    }

    @media screen and (max-width: 1023px) {
        pfe-navigation-item.expanded[pfe-icon=web-mobile-menu]:not([has_tray]) {
            background-color: #{pfe-color(surface--lightest)};
        }
        pfe-navigation-item:not([parent_hidden])[is_nested].expanded .pfe-navigation-item__trigger.pfe-navigation-item[aria-expanded="true"] {
            border-left: 4px solid #06c !important;
            border-right: 1px solid #d2d2d2 !important;
        }
        pfe-navigation-item:not([parent_hidden])[is_nested] .pfe-navigation-item__trigger.pfe-navigation-item[aria-expanded="true"] {
            border-left: 4px solid #06c !important;
            border-right: 1px solid #d2d2d2 !important;
        }
    }

    // Hide the carets on desktop.
    @media screen and (min-width: 1024px) {
        .pfe-navigation-item__trigger::after {
            display: none !important;
        }
        .pfe-navigation-item__trigger:hover::after {
            display: block !important;
        }
    }

    .pfe-navigation-item__trigger {
        --pfe-navigation__trigger-icon--Visible: hidden;
        text-align: center;

        &:hover {
            --pfe-navigation__trigger-icon--Visible: visible;
        }
        &.pfe-navigation-item {
            box-sizing: border-box;

            &:hover {
                cursor: pointer;
                border-top: #{pfe-var(surface--border-width--heavy)} solid #{pfe-color(surface--accent)};
            }
        }
        pfe-icon {
            max-height: 20px;
        }
        pfe-icon:not(.load-failed) svg.pfe-icon filter.pfe-icon feFlood.pfe-icon {
            flood-color: #{pfe-color(surface--darkest--text)} !important;
        }
    }

    pfe-navigation-item:not([parent_hidden])[is_nested].expanded .pfe-navigation-item__tray.pfe-navigation-item {
        top: 0;
    }
}

pfe-navigation [slot="logo"] {
    margin: 0;
    > a {
        display: flex;
        align-items: center;

        > * {
            max-height: 32px;
        }
    }
}

// Turn off internal link outline
pfe-navigation-item {
    [slot="trigger"] > a {
        outline: none;
        text-decoration: none;
        color: #{pfe-color(ui-base--text)} !important;

        &:hover,
        &:focus {
            text-decoration: none; //Override bootstrap.
        }
    }
    &.expanded {
        [slot="trigger"] > a,
        [slot="trigger"] > a.active {
            color: #{pfe-color(surface--lightest--text)} !important;
        }
        pfe-navigation-main[show_content] & {
            [slot="trigger"] > a.active {
            color: #{pfe-color(surface--lightest--text)} !important;
            }
        }
    }
    // Override active link color.
    pfe-navigation-main[show_content] & {
        [slot="trigger"] > a.active {
            color: #{pfe-color(ui-base--text)} !important;
        }
    }
    &[parent_hidden] [slot="trigger"] {
        text-align: center;
    }

    // Style main menu links when in the tray.
    &:not([parent_hidden])[is_nested] [slot="trigger"] > a {
        color: #{pfe-color(ui-complement)} !important;
    }
}

[slot="mobile-search"] {
    input[type="text"] {
        padding: 5px 10px;
    }
}
/* ... */

